# cn-strategies

./: .gitignore
Team Agora Team11/: strategy.py
Ternary/: strategy.py
Titanium/: strateji.py
strategies/Artemis/: strategy.py
strategies/CyberrCore/: strategy.py
strategies/GDG-DEU/: strategy.py
strategies/Kafein/: MIMARI_YAPISI.md  MODEL_EGITIM_NOTU.md
strategies/Takim 6 Beta/: strategy.py
strategies/Takım 18/: strategy.py
strategies/bakircaydragons/: strategy.py
strategies/cmoon/: README.md  pyproject.toml  strategy.py
strategies/cmoon/models/: model_kapcoin_usd_train.pkl  model_metucoin_usd_train.pkl  model_tamcoin_usd_train.pkl
strategies/cmoon/research/: ensemble_model.py  features.py  ml_features.py  risk.py
strategies/cybercoon/: README.md  config.py  indicators.py  requirements.txt  strategy.py
strategies/pizza-yoksa-bize-musaade/: strategy.py
strategies/samtri/: strategy.py
techtachtach/: strategy.py
