[project]
name = "cmoon"
version = "0.1.0"
description = "Hackathon trading bot — purged-CV ML pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "ccxt>=4.0",
    "optuna>=3.6",
    "matplotlib>=3.8",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "cnlib>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "scikit-learn>=1.8.0",
]
